# InternHunter

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  debug.txt  docker-compose.yml  extract.py  master_resume.md  pyproject.toml  setup.sh
config/: dream_companies.yaml  hunter_config.yaml
obsidian_template/Internships/: Kanban.md
obsidian_template/Internships/Templates/: Application.md
src/intern_hunter/: __init__.py  cli.py  config.py  interactive_setup.py  models.py  obsidian_learner.py
src/intern_hunter/core/: __init__.py  company_intel.py  email_engine.py  llm.py  obsidian_tracker.py  reply_intelligence.py  resume_tailor.py  scheduler.py  scorer.py  scraper.py  telegram_bot.py
tests/: test_resume_tailor.py  test_scorer.py  test_scraper.py
